--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,14 @@
 <!doctype html>
-<html class="no-js" ng-controller="appController">
+<html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>数据分析平台-后台管理系统</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="components/select2/select2.css" />
-    <link rel="stylesheet" href="components/angular-ui-tree/dist/angular-ui-tree.min.css" />
+    <link rel="stylesheet" href="components/font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -21,47 +20,8 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
-    <div class="container wrapper">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#"><span class="glyphicon glyphicon-home"> </span></a></li>
-          <li><a ng-href="#/worldmap"><span class="glyphicon glyphicon-cog"> </span></a></li>
-          <li><a ng-href="#"><span class="glyphicon glyphicon-off"></span></a></li>
-        </ul>
-        <h3 class="logo">
-          Angular-Require-Grunt-Express System
-        </h3>
-      </div>
-
-      <div class="container contentWrapper">
-        <div class="row">
-          <div class="col-md-3">
-            
-<nav id="menu">
-  <ul class="nav side-nav">
-    <li ng:repeat="nav in navigation">
-      <a href="#{{nav.route}}">{{nav.title}}</a>
-      <ul class="nav sub-nav">
-        <li ng:repeat="subNav in nav.list">
-          <a href="#{{subNav.route}}">{{subNav.title}}</a>
-        </li>
-      </ul>
-    </li>
-  </ul>
-</nav>
-          </div>
-          <div class="col-md-9">
-            <div ui-view></div>
-          </div>
-        </div>
-      </div>
-
-      <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> -COPY RIGHT-</p>
-      </div>
-    </div>
-
+    <div ui-view></div>
+    
     <!-- build:js(.) scripts/oldieshim.js -->
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
@@ -72,9 +32,9 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <!-- endbuild -->
 
-        <script data-main="scripts/main" src="components/requirejs/require.js"></script>
+    <script data-main="scripts/main" src="components/requirejs/require.js"></script>
 </body>
 </html>
