--- a/app/index.html
+++ b/app/index.html
@@ -2,13 +2,12 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>数据分析平台-后台管理系统</title>
+    <title>后台管理系统</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="components/font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -20,7 +19,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div ui-view></div>
+    <div ng-view></div>
     
     <!-- build:js(.) scripts/oldieshim.js -->
     <!--[if lt IE 9]>
